@@ -1,35 +1,39 @@
 package io.github.evacchi.javac.plugin;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
+import static java.util.Arrays.asList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class MyPluginIT extends BaseIT {
 
     public MyPluginIT() {
-        super(Path.of("src/test/resources/project1"));
+        super(Paths.get("src/test/resources/project1"));
     }
 
     @Test
     public void mytest() throws Exception {
-        var prj = copySourceToTemp("mytest");
-        var fsc = new FileScanner(prj.resolve(sourceDirectory), ".java");
-        var compiler =
+        Path prj = copySourceToTemp("mytest");
+        FileScanner fsc = new FileScanner(prj.resolve(sourceDirectory), ".java");
+        JavaCompiler compiler =
                 new JavaCompiler(
                         fsc.scan(),
                         prj.resolve(sourceDirectory.toAbsolutePath()),
                         prj.resolve(targetDirectory.toAbsolutePath()))
 //                        .withOption("--module-path=" + targetDirectory.toAbsolutePath())
                         .withOption("-Xplugin:MyPlugin")
-                        .withOption("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
-                        .withOption("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
-                        .withOption("--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
-        var compiled = compiler.compile();
-        var cl = new DiskClassLoader(prj.resolve(targetDirectory));
-        var result = cl.loadAndInvoke("com.example.A", "a");
-        assertEquals(List.of("quux"), result);
+                ;
+//                        .withOption("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+//                        .withOption("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+//                        .withOption("--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
+        FileMapper compiled = compiler.compile();
+        DiskClassLoader cl = new DiskClassLoader(prj.resolve(targetDirectory));
+        Object result = cl.loadAndInvoke("com.example.A", "a");
+        assertEquals(asList("quux"), result);
     }
 }
